--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="home" class="content active">
             <section class="home-section profile-section">
                 <div class="profile-photo">
-                    <img src="images/profile-photo.jpg" alt="Bart Jaworski" class="profile-image">
+                    <img src="images/profile-photo.png" alt="Bart Jaworski" class="profile-image">
                 </div>
                 
                 <div class="home-content">
