--- a/post.html
+++ b/post.html
@@ -36,6 +36,17 @@
     <div id="loading">Loading post...</div>
     
     <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/markdown-it@13.0.1/dist/markdown-it.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/markdown-it-footnote@3.0.3/dist/markdown-it-footnote.min.js"></script>
+    <script>
+        // Ensure markdown-it is available globally
+        if (typeof window.markdownit === 'undefined' && typeof markdownit !== 'undefined') {
+            window.markdownit = markdownit;
+        }
+        if (typeof window.markdownitFootnote === 'undefined' && typeof markdownitFootnote !== 'undefined') {
+            window.markdownitFootnote = markdownitFootnote;
+        }
+    </script>
     <script src="./js/blog.js"></script>
 </body>
 </html>
