added projects to the projects tab and updated home page copy

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <div class="name-container">
                 <span id="author-name" class="typing-name">Bart Jaworski</span>
             </div>
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation menu">
+                <span class="hamburger-icon"></span>
+            </button>
             <nav class="tabs">
                 <div class="tab active" data-tab="home">Home</div>
                 <div class="tab" data-tab="blog">Blog</div>
@@ -45,7 +48,10 @@
                     <h1>
                         Hello human!
                     </h1>
-                    <p>My name is Bart, and I mostly do three things: build things, read a lot, and run. You can find everything I’ve built in the “Projects” section, and some of my writing in the blog section. I read about one book a week, and you can find my latest annual book review <a href="#">here</a>.</p>
+                    <p>My name is Bart, and I mostly do four things: build things 💻, read 📚, run 🏃, and meditate 🧘. You can find the things I've built in the <a href="javascript:void(0)" onclick="activateTab('projects')">Projects</a> section, and some of my writing in the <a href="javascript:void(0)" onclick="activateTab('blog')">Blog</a> section. 
+                    <br />     
+                    <br />     
+                    I also read about one book a week, and you can find my latest annual book review <a href="https://84rt.github.io/post.html?slug=2024-book-review">here</a>.</p>
                 </div>
             </section>
             
