Implemented a mobile hamburger

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p>My name is Bart, and I mostly do four things: build things 💻, read 📚, run 🏃, and meditate 🧘. You can find the things I've built in the <a href="javascript:void(0)" onclick="activateTab('projects')">Projects</a> section, and some of my writing in the <a href="javascript:void(0)" onclick="activateTab('blog')">Blog</a> section. 
                     <br />     
                     <br />     
-                    I also read about one book a week, and you can find my latest annual book review <a href="https://84rt.github.io/post.html?slug=2024-book-review">here</a>.</p>
+                    I also read about one book a week, my latest annual book review is <a href="https://84rt.github.io/post.html?slug=2024-book-review">here</a>.</p>
                 </div>
             </section>
             
