--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                     <h1>
                         Hello human!
                     </h1>
+                    <p><em>"I know only that I must know more."</em></p>
                     <p>I believe that we are currently living in the most important century of humanity. My life's mission is to ensure that the creation of AGI goes well and safely. You can find some of the things I have worked on so far in the <a href="javascript:void(0)" onclick="activateTab('projects')">Projects</a> section and some of my writings in the <a href="javascript:void(0)" onclick="activateTab('blog')">Blog</a> section.</p>
                     <br />     
-                    <br />     
-                    I read ~1 book a week, you can find my latest annual book review <a href="https://84rt.github.io/post.html?slug=2024-book-review">here</a>.</p>
+                    <p>I read ~1 book a week, you can find my latest annual book review <a href="https://84rt.github.io/post.html?slug=2024-book-review">here</a>.</p>
                 </div>
             </section>
             
