updated the quote

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h1>
                         Hello human!
                     </h1>
-                    <p><em>"I know only that I must know more."</em></p>
+                    <p><em>"The first principle is that you must not fool yourself—and you are the easiest person to fool." - Richard Feynman</em></p>
                     <p>I believe that we are currently living in the most important century of humanity. My life's mission is to ensure that the creation of AGI goes well and safely. You can find some of the things I have worked on so far in the <a href="javascript:void(0)" onclick="activateTab('projects')">Projects</a> section and some of my writings in the <a href="javascript:void(0)" onclick="activateTab('blog')">Blog</a> section.</p>
                     <br />     
                     <p>I read ~1 book a week, you can find my latest annual book review <a href="https://84rt.github.io/post.html?slug=2024-book-review">here</a>.</p>
